--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -11,10 +11,10 @@
                     <h1>ΟΚ!Τhess</h1>
                     <h2>{% trans 'Your early stage partner' %}</h2>
                     <p class="desc">
-                      {% blocktrans %}OK!Thess provides space and technical support to teams of people
-                      with innovative ideas helping them to <strong>Validate a Business
-                      Model Fast</strong>, and to <strong>Meet,
-                      Mix and Connect</strong> with like-minded peers.
+                      {% blocktrans %}OK!Thess is Thessaloniki’s leading startup hub and a catalyst for the growth of the local innovation ecosystem.
+<br>We help entrepreneurs bring innovative ideas to market through an acceleration program that includes training, coaching, matchmaking with mentors and access to capital.
+<br>
+OK!Thess is also the place where community meetups and open events allow like-minded peers to mix and connect.
                       {% endblocktrans %}
                     </p>
                     <br>
