translate button in english
Translate the apply now button in english

--- a/main/templates/main/demoday_en.html
+++ b/main/templates/main/demoday_en.html
@@ -116,8 +116,7 @@
 
             <div class="col-md-8 col-md-offset-7">
             <p>
-                <a class="btn-blue btn-large" href="https://docs.google.com/forms/d/e/1FAIpQLSeCrQz5zAlH5NFoKrRdmzsp67fB3hYKjqDUXVlgNsjMET9hpg/viewform?usp=sf_link" target="_blank" role="button"> <span class="glyphicon glyphicon-exclamation-sign"></span>Υποβολή αιτήσεων εδώ
-                </a>
+                <a class="btn-blue btn-large" href="https://docs.google.com/forms/d/e/1FAIpQLSeCrQz5zAlH5NFoKrRdmzsp67fB3hYKjqDUXVlgNsjMET9hpg/viewform?usp=sf_link" target="_blank" role="button"> <span class="glyphicon glyphicon-exclamation-sign"></span>Apply here</a>
             </p>
         
         </div>
