--- a/main/templates/main/demoday_en.html
+++ b/main/templates/main/demoday_en.html
@@ -7,13 +7,13 @@
     <div class="container contact">
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
-                <h1>{% trans '5ο Thessaloniki Demo Day on 12 September 2019' %}</h1>
+                <h1>{% trans '5th Thessaloniki Demo Day, 12 September 2019' %}</h1>
                     <div class="index-land-content">
                      <h2>{% trans 'Open invitation to participate in the Thessaloniki Demo Day - Applications close on 25 August 2019' %}</h2>
                     </div>
                 <p>
                     {% blocktrans %}
-                        OK!Thess invites startup teams to meet investors from Greece and South-East Europe by applying to participate in the next Thessaloniki Demo Day, taking place on 12 September 2019, at OK!Thess.
+                        OK!Thess invites startup teams to meet investors from Greece and South-East Europe by applying to participate in the next Thessaloniki Demo Day, taking place on 12 September 2019.
                     {% endblocktrans %}
                 </p>
                 <br>
@@ -46,7 +46,7 @@
                 <h3>{% trans 'Who are the investors participating' %}</h3>
                 <p>
                     {% blocktrans %}
-                    At the 5th Demo Day the participants that are expected include the following active investors (VC and angel networks) from Greece and across South-East Europe:
+                    The following active investors from Greece and Europe are participating:
                 <ul>
 
                     <li><a href="https://metavallon.vc/" target="_blank">Metavallon</a></li>
@@ -75,20 +75,20 @@
 
             <div class="col-md-8 col-md-offset-2">
                 <br>
-                <h3>{% trans 'Terms of participation for startups' %}</h3>
+                <h3>{% trans 'Startup participation terms' %}</h3>
                 <p>
                     {% blocktrans %}
                         The only prerequisite for the participation of a startup in the Thessaloniki Demo Day is to have reached a level of maturity and preparation sufficient for the founding team to present a complete investment proposal (the “ask”).
-                        <br>
-                        The proposing teams do not have to have participated in OK!Thess’ incubation and acceleration program. The invitation is open to any team from anywhere. It is also not obligatory for a team to present itself to investors for the first time.
+                        <br><br>
+                        Startups do not need to have gone through the incubation and acceleration program of OK!Thess. Applications are open to any startup from anywhere. It is also not obligatory for a team to present itself to investors for the first time.
                     {% endblocktrans %}
                 </p>
 
                 <br>
-                <h3>{% trans 'Process' %}</h3>
+                <h3>{% trans 'Application process' %}</h3>
                 <p>
                     {% blocktrans %}
-                        Interested teams are invited to submit applications which are sent to investors for them to review. The investors will express their interest to meet specific teams in 1-1 meetings on Septemnber 12th. A schedule of meetings will then be made by OK!Thess, the teams involved will be informed and the booking will thus be confirmed.
+                        Startup applications are submitted through <a href="https://docs.google.com/forms/d/e/1FAIpQLSeCrQz5zAlH5NFoKrRdmzsp67fB3hYKjqDUXVlgNsjMET9hpg/viewform?usp=sf_link" target="_blank">this form</a>. Applications are screened by OK!Thess and forwarded to investors for their review. Investors express their interest in meeting with specific startups and OK!Thess arranges the one-on-one meetings for September 12th. Startups are notified about their meeting schedule at least one week in advance.
                     {% endblocktrans %}
                 </p>
 
@@ -96,8 +96,8 @@
                 <h3>{% trans 'Timetable' %}</h3>
                 <p>
                     <ul>
-                        <li>25/8: Deadline for submission of the startup summary (<a href="https://docs.google.com/forms/d/e/1FAIpQLSeCrQz5zAlH5NFoKrRdmzsp67fB3hYKjqDUXVlgNsjMET9hpg/viewform?usp=sf_link" target="_blank">Apply here</a>)</li>
-                        <li>4/9: Applicants are informed about the schedule of meetings</li>
+                        <li>25/8: Startup application deadline (<a href="https://docs.google.com/forms/d/e/1FAIpQLSeCrQz5zAlH5NFoKrRdmzsp67fB3hYKjqDUXVlgNsjMET9hpg/viewform?usp=sf_link" target="_blank">apply here</a>)</li>
+                        <li>4/9: Startups are notified about their meetings with investors</li>
                         <li>12/9: Thessaloniki Demo Day</li>
                     </ul>
                 </p>
@@ -108,7 +108,6 @@
                     {% blocktrans %}
                     Dimitrios Kourtesis, OK!Thess Program Manager
                     <br>Email: dimitrios.kourtesis@okthess.gr
-                    <br>Phone: +30 2313 317 303
                     {% endblocktrans %}
                 </p>
 
