--- a/main/templates/main/demoday_el.html
+++ b/main/templates/main/demoday_el.html
@@ -36,7 +36,7 @@
                 <p>
                 <br>
                 {% blocktrans %}
-                    Το προηγούμενο Demo Day πραγματοποιήθηκε τον Μάϊο του 2019 στο OK!Thess και ήταν η μεγαλύτερη μέχρι σήμερα συγκέντρωση εκπροσώπων Venture Capital funds και δικτύων επιχειρηματικών αγγέλων στη Θεσσαλονίκη, με αποκλειστικό αντικείμενο την πραγματοποίηση κατ’ ιδίαν συναντήσεων με ομάδες του startup οικοσυστήματος. Συμμετείχαν 24 επενδυτές που πραγματοποίησαν περισσότερες από 130 συναντήσεις με 36 startups από την Ελλάδα και την Κύπρο. 
+                    Το προηγούμενο Demo Day πραγματοποιήθηκε τον Μάρτιο του 2019 στο OK!Thess και ήταν η μεγαλύτερη μέχρι σήμερα συγκέντρωση εκπροσώπων Venture Capital funds και δικτύων επιχειρηματικών αγγέλων στη Θεσσαλονίκη, με αποκλειστικό αντικείμενο την πραγματοποίηση κατ’ ιδίαν συναντήσεων με ομάδες του startup οικοσυστήματος. Συμμετείχαν 24 επενδυτές που πραγματοποίησαν περισσότερες από 130 συναντήσεις με 36 startups από την Ελλάδα και την Κύπρο. 
                 {% endblocktrans %}
                 </p>
             </div>    
