Add Gravity Ventures

--- a/main/templates/main/demoday_en.html
+++ b/main/templates/main/demoday_en.html
@@ -74,6 +74,7 @@
                     <li><a href="https://www.heban.gr/" target="_blank">Hellenic Business Angels Network</a></li>
                     <li><a href="https://www.adrionban.gr/" target="_blank">Adrion Business Angels Network</a></li>
                     <li><a href="http://www.thermi-group.com/en/thermi-ventures/" target="_blank">Thermi Ventures</a></li>
+                    <li><a href="https://gravity.ventures/" target="_blank">Gravity Ventures</a></li>
                 </ul>
                     <br>
                     Ιnvestors are looking for early-stage opportunities across the spectrum: from hardware to software technology and services for markets in health, transportation, energy, commerce, manufacturing, agriculture, foodtech, fintech, tourism.
