Add Gravity Ventures

--- a/main/templates/main/demoday_el.html
+++ b/main/templates/main/demoday_el.html
@@ -74,6 +74,7 @@
                     <li><a href="https://www.heban.gr/" target="_blank">Hellenic Business Angels Network</a></li>
                     <li><a href="https://www.adrionban.gr/" target="_blank">Adrion Business Angels Network</a></li>
                     <li><a href="http://www.thermi-group.com/en/thermi-ventures/" target="_blank">Thermi Ventures</a></li>
+                    <li><a href="https://gravity.ventures/" target="_blank">Gravity Ventures</a></li>
                 </ul>
                     <br>
                     Οι επενδυτές αναζητούν ευκαιρίες σε ομάδες αρχικού σταδίου και σε ευρύ φάσμα επιχειρηματικών μοντέλων που περιλαμβάνει προϊόντα και υπηρεσίες στους τομείς της υγείας, μεταφορών, ενέργειας, εμπορίου, παραγωγής, αγροδιατροφής, fintech και τουρισμού.
