--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -4,7 +4,7 @@
 {% load i18n %}
 
 {% block content %}
-    <div class="container index-land">
+    <div class="container">
         <div class="row">
             <div class="col-md-5">
                 <div class="index-land-content">
@@ -44,7 +44,7 @@ OK!Thess is also the place where community meetups and open events allow like-mi
             <div class="col-md-7">
                 <!--<div onclick="plusDivs(1)" class="slider-arrow-right">
                     <i class="glyphicon glyphicon-chevron-right"></i>
-                </div>-->
+                </div>
                 <div class="slider">
                     <img src="{% static '/main/img/slider-1.jpg' %}" class="slider-img">
                     <div class="slider-text">{% trans 'Workshops' %}</div>
@@ -56,6 +56,9 @@ OK!Thess is also the place where community meetups and open events allow like-mi
                 <div class="slider">
                     <img src="{% static '/main/img/slider-3.jpg' %}" class="slider-img">
                     <div class="slider-text">{% trans 'Mentoring' %}</div>
+                </div-->
+                <div class="slider-video">
+                    <iframe width="672" height="378" src="https://www.youtube.com/embed/oBFTFp5iy4Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
